# ai-git-core-template

./: .cursorrules  .git-atomize.yml.example  .markdownlintrc  .propagation.json  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  plan.md
.agent/rules/: rule-0.md
.agent/workflows/: reolplazr.md
.ai-core/: AGENT_INDEX.md  ARCHITECTURE.md
.gitcore/: ARCHITECTURE.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  code-review.agent.md  protocol-claude.agent.md  protocol-codex.agent.md  protocol-gemini.agent.md  protocol-grok.agent.md  quick.agent.md  recipe-loader.agent.md  router.agent.md  workflow-manager.agent.md  workspace-hub.agent.md
.github/instructions/: auto-context.instructions.md  codex-tools.instructions.md  grok-tools.instructions.md
.github/issues/: .gitkeep  .issue-mapping.json  BUG_install_unicode_encoding.md  DOCS_dependency-workflow-system.md  FEAT_cli_integration_hub.md  FEAT_gc-issue-command.md  FEAT_github-email-bot.md  FEAT_implement-model-provider-trait.md  FEAT_integrate-surrealdb-memory.md  FEAT_model-specific-agents.md  FEAT_protocol-v3-full-autonomy.md  FEAT_robust_init_dependencies.md  FEAT_rust-dispatcher-agent.md  FEAT_rust-guardian-agent.md  FEAT_rust-issue-syncer.md  FEAT_setup-research-agent-structure.md  FEAT_test_sync.md  FEAT_workflow-agents-panel.md  PLAN_CLI_Roadmap.md  REFACTOR_harden-install-scripts.md  TASK_translate-instructions-en.md  TEST_e2e_testing_framework.md  _TEMPLATE.md  sync-test.md
.github/prompts/: help.prompt.md  status.prompt.md  update.prompt.md
.github/workflows/: agent-dispatcher.yml  build-cli.yml  build-tools.yml  ci-health.yml  commit-atomicity.yml  context-research.yml  copilot-auto-implementation.yml  copilot-meta-analysis.yml  dependency-manager.yml  e2e-testing.yml  global-self-healing.yml  guardian-agent.yml  living-context.yml  planner-agent.yml  post-quarantine-analysis.yml  process-telemetry.yml  protocol-propagation.yml  release.yml  self-healing-simple.yml  self-healing.yml  structure-validator.yml  sync-issues.yml  test-self-healing.yml  update-protocol.yml  workflow-validator.yml
.✨/: AGENT_INDEX.md  ARCHITECTURE.md
docs/: CLI_TRUST.md  COMMIT_STANDARD.md  DOCUMENTATION_SYSTEM.md  README.md  RFC_001_RUST_UNIFICATION.md  infographic.html
docs/agent-docs/: CONTEXT_PROTOCOL.md  EVOLUTION_PROTOCOL.md  HUMAN_LAYER_PROTOCOL.md  MICRO_AGENTS.md  README.md  REPORT_GLOBAL_SELFHEALING_DIAGNOSIS.md  RESEARCH_LLM_TOOL_CALLING.md  RESEARCH_STACK_CONTEXT.md  VALIDATION_REPORT_20251204151957.md  VALIDATION_REPORT_20251204152259.md  VALIDATION_REPORT_20251204160607.md  VALIDATION_REPORT_20251204163027.md  VALIDATION_REPORT_20251204173854.md  VALIDATION_REPORT_20251204180659.md  VALIDATION_REPORT_20251204182054.md  VALIDATION_REPORT_20251204182127.md  VALIDATION_REPORT_20251204193512.md  VALIDATION_REPORT_20251204203900.md  VALIDATION_REPORT_20251204213607.md  VALIDATION_REPORT_20251204223657.md  VALIDATION_REPORT_20251204230442.md  VALIDATION_REPORT_20251204233519.md  VALIDATION_REPORT_20251205001732.md  VALIDATION_REPORT_20251205001738.md
docs/agent-docs/prompts/: PROMPT_PROTOCOL_INSTALLER.md
docs/agent-docs/reports/: REPORT_PROJECT_AUDIT.md
docs/agent-docs/specs/: SPEC_HUMAN_LAYER_PROTOCOL.md
docs/explanation/: CLI_TRUST.md
docs/prompts/: ARCHITECTURE_REVIEW_20251231_1310.md
docs/reference/: README.md
docs/wiki/: Home.md
scripts/: agent-state.sh  ai-report.ps1  ai-report.sh  analyze-atomicity.sh  deploy-self-healing.ps1  dispatcher-core.ps1  equip-agent.ps1  equip-agent.sh  generate-workspace-agent.ps1  git-atomize.ps1  git-atomize.sh  guardian-core.ps1  init_project.ps1  init_project.sh  migrate-ide-rules.ps1  send-telemetry.ps1  sync-issues.ps1  sync-issues.sh
telemetry/: README.md
telemetry/submissions/: .gitkeep
tools/atomicity-checker/: Cargo.toml  README.md
tools/atomicity-checker/src/: analyzer.rs  config.rs  git.rs  main.rs  reporter.rs
tools/context-research-agent/src/: context.rs  intelligence.rs  main.rs  registry.rs  report.rs  search.rs
tools/deprecated/git-core-cli/: Cargo.toml
tools/deprecated/git-core-cli/src/: config.rs  main.rs  utils.rs
tools/deprecated/git-core-cli/src/commands/: check.rs  init.rs  install.rs  migrate.rs  mod.rs  self_update.rs  status.rs  upgrade.rs  version.rs
tools/deprecated/git-core-cli/src/installer/: backup.rs  download.rs  install.rs
tools/git-core/: Cargo.toml
tools/git-core-cli/src/: config.rs  main.rs  utils.rs
tools/git-core-cli/src/commands/: check.rs  init.rs  install.rs  migrate.rs  self_update.rs  status.rs  upgrade.rs  version.rs
tools/git-core-cli/src/installer/: backup.rs  download.rs  install.rs  mod.rs
tools/git-core/.github/issues/: TASK_ci-failure-cargo-in-update-1186649950.md
tools/git-core/crates/gc-adapter-cli/: Cargo.toml
tools/git-core/crates/gc-adapter-cli/src/: lib.rs
tools/git-core/crates/gc-adapter-fs/src/: lib.rs
tools/git-core/crates/gc-adapter-github/src/: lib.rs
tools/git-core/crates/gc-cli/: Cargo.toml
tools/git-core/crates/gc-cli/src/: main.rs
tools/git-core/crates/gc-cli/src/commands/: analyze.rs  check.rs  context.rs  dispatch.rs  finish.rs  init.rs  issue.rs  mocks.rs  mod.rs  next.rs  pr.rs  task.rs  update.rs  workflow.rs
tools/git-core/crates/gc-cli/tests/: cli_tests.rs
tools/git-core/crates/gc-core/src/: lib.rs  ports.rs
tools/git-core/crates/gc-validator/: README.md
tools/git-core/crates/gc-validator/src/: guardian_core.rs  main.rs
tools/issue-syncer/: Cargo.toml  issue-syncer-errors.txt
tools/issue-syncer/src/: github.rs  main.rs  mapping.rs  parser.rs  syncer.rs
tools/issue-syncer/src/commands/: issue.rs
tools/workflow-orchestrator/: README.md
tools/workflow-orchestrator/src/: analyzer.rs  github.rs  main.rs  parallel.rs
