[package]
name = "atomicity-checker"
version = "0.1.0"
edition = "2021"
description = "High-performance commit atomicity checker for Git-Core Protocol"
authors = ["Git-Core Protocol"]
license = "MIT"

[[bin]]
name = "atomicity-checker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "process"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization (YAML config, JSON output)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for bot detection and file patterns
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism for commit analysis
rayon = "1.10"

# Environment
dotenv = "0.15"

# Colored terminal output
colored = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
