[workspace]
resolver = "2"
members = [
    "crates/gc-cli",
    "crates/gc-core",
    "crates/gc-adapter-github",
    "crates/gc-adapter-fs",
    "crates/gc-adapter-system",
    "crates/gc-adapter-cli",
    "crates/gc-validator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Git-Core Protocol Team"]
license = "MIT"

[workspace.dependencies]
# Core
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
color-eyre = "0.6.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# Adapters
octocrab = "0.48.1"

# UI
indicatif = "0.18.3"
console = "0.15"

# Internal
gc-core = { path = "crates/gc-core" }
gc-adapter-github = { path = "crates/gc-adapter-github" }
gc-adapter-fs = { path = "crates/gc-adapter-fs" }
gc-adapter-system = { path = "crates/gc-adapter-system" }
gc-adapter-cli = { path = "crates/gc-adapter-cli" }
