[package]
name = "git-core-cli"
version = "0.1.0"
edition = "2021"
description = "Git-Core Protocol CLI - Modern installer and manager for AI-assisted development"
authors = ["iberi22"]
license = "MIT"
repository = "https://github.com/iberi22/Git-Core-Protocol"
keywords = ["git", "ai", "protocol", "cli", "copilot"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-core"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# HTTP client for downloading
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
tokio-tar = "0.3"
flate2 = "1.0"
fs_extra = "1.3"
tempfile = "3.8"

# Progress bars and terminal UI
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
dirs = "5.0"
semver = "1.0"
regex = "1.10"

# Git operations (optional, for advanced features)
git2 = { version = "0.18", optional = true }

[features]
default = []
git-integration = ["git2"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
panic = "abort"     # Remove panic unwinding code
strip = true        # Strip symbols
